--- a/SimpleWebApp/SimpleWebApp/packages.config
+++ b/SimpleWebApp/SimpleWebApp/packages.config
@@ -20,6 +20,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.Compiler" version="1.8.11" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.TypeScript.MSBuild" version="1.8.11" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
