--- a/SimpleWebApp/SimpleWebApp/SimpleWebApp.csproj
+++ b/SimpleWebApp/SimpleWebApp/SimpleWebApp.csproj
@@ -190,6 +190,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\components\detailmodal\detailmodal.component.css" />
+    <Content Include="app\components\detailmodal\detailmodal.component.html" />
     <Content Include="Content\angular-material.css" />
     <Content Include="Content\angular-material.layout-attributes.css" />
     <Content Include="Content\angular-material.layout-attributes.min.css" />
@@ -199,10 +201,11 @@
     <Content Include="Content\angular-material.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\clear-browser-default.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\site.css" />
     <Content Include="app\components\titlelist\titlelist.component.css" />
     <Content Include="app\components\titlelist\titlelist.component.html" />
     <None Include="readme.md" />
@@ -270,7 +273,8 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app\boottitlelist.ts" />
+    <TypeScriptCompile Include="app\bootstrap.ts" />
+    <TypeScriptCompile Include="app\components\detailmodal\detailmodal.component.ts" />
     <TypeScriptCompile Include="app\components\titlelist\titlelist.component.ts" />
     <TypeScriptCompile Include="app\services\app.titleservice.ts" />
     <TypeScriptCompile Include="Scripts\Enums.ts">
